--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="background-image-container">
     <header class="text-gray-600 body-font">
         <!-- Navigation Bar Same as index.html -->
     </header>
