--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="background-image-container">
-    <header class="text-gray-600 body-font">
+    <header class="text-white body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
                 <span class="ml-3 text-xl">Pet Shop</span>
@@ -22,7 +22,7 @@
             </nav>
         </div>
     </header>
-    <main class="container mx-auto px-4">
+    <main class="container mx-auto px-4 text-white">
         <h1 class="text-2xl font-bold text-center my-8">Sobre Nosotros</h1>
             <div class="mx-auto leading-relaxed text-base mb-4">
             <p>Bienvenido a nuestra tienda de mascotas, un lugar donde las necesidades de cada mascota se satisfacen con amor y cuidado. Ubicados en el corazón de Ica, Perú, nos comprometemos a proporcionar alimentos, juguetes y accesorios de alta calidad para tus queridos perros y gatos.</p>
