--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="background-image-container">
-    <header class="text-gray-600 body-font">
+    <header class="text-white body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
                 <span class="ml-3 text-xl">Pet Shop</span>
@@ -21,12 +21,12 @@
             </nav>
         </div>
     </header>
-    <main class="container mx-auto px-4">
+    <main class="container mx-auto px-4 h-screen" >
         <h1 class="text-3xl font-bold text-center my-8">Bienvenidos a Nuestra Tienda de Mascotas</h1>
         <p class="text-center">Encuentra el mejor alimento, juguetes y accesorios para tu perro o gato.</p>
     </main>
     <footer>
-        <p>Copyright &copy; 2022 Petshop E-commerce</p>
+        <p class="text-center">Copyright &copy; 2022 Petshop E-commerce</p>
     </footer>
 </body>
 </html>
