Added white text

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Pet Store</title>
+    <title>Sobre Nosotros - Pet Store</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
@@ -15,10 +15,10 @@
                 <span class="ml-3 text-xl">Pet Shop</span>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-                <a href="index.html" class="mr-5 hover:text-gray-900">Inicio</a>
-                <a href="products.html" class="mr-5 hover:text-gray-900">Productos</a>
-                <a href="about.html" class="mr-5 hover:text-gray-900">Sobre Nosotros</a>
-                <a href="contact.html" class="mr-5 hover:text-gray-900">Contáctanos</a>
+                <a href="index.html" class="mr-5 hover:text-gray-200">Inicio</a>
+                <a href="products.html" class="mr-5 hover:text-gray-200">Productos</a>
+                <a href="about.html" class="mr-5 hover:text-gray-200">Sobre Nosotros</a>
+                <a href="contact.html" class="mr-5 hover:text-gray-200">Contáctanos</a>
             </nav>
         </div>
     </header>
@@ -32,7 +32,7 @@
 
     </main>
     <footer>
-        <p>Copyright &copy; 2022 Petshop E-commerce</p>
+        <p class="text-center text-white">Copyright &copy; 2024 Petshop IA</p>
     </footer>
 </body>
 </html>
