--- a/contact.html
+++ b/contact.html
@@ -9,16 +9,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="background-image-container">
-    <header class="text-gray-600 body-font">
+    <header class="text-white body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
                 <span class="ml-3 text-xl">Pet Shop</span>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-                <a href="index.html" class="mr-5 hover:text-gray-900">Inicio</a>
-                <a href="products.html" class="mr-5 hover:text-gray-900">Productos</a>
-                <a href="about.html" class="mr-5 hover:text-gray-900">Sobre Nosotros</a>
-                <a href="contact.html" class="mr-5 hover:text-gray-900">Contáctanos</a>
+                <a href="index.html" class="mr-5 hover:text-gray-200">Inicio</a>
+                <a href="products.html" class="mr-5 hover:text-gray-200">Productos</a>
+                <a href="about.html" class="mr-5 hover:text-gray-200">Sobre Nosotros</a>
+                <a href="contact.html" class="mr-5 hover:text-gray-200">Contáctanos</a>
             </nav>
         </div>
     </header>
@@ -55,7 +55,7 @@
         </div>
     </main>
     <footer>
-        <!-- Footer Content -->
+        <p class="text-center">Copyright &copy; 2024 Petshop IA</p>
     </footer>
 </body>
 </html>
