--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eyg Pet Shop</title>
+    <title>IA Pet Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,19 +14,19 @@
                 <span class="ml-3 text-xl">Pet Shop</span>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-                <a href="index.html" class="mr-5 hover:text-gray-900">Inicio</a>
-                <a href="products.html" class="mr-5 hover:text-gray-900">Productos</a>
-                <a href="about.html" class="mr-5 hover:text-gray-900">Sobre Nosotros</a>
-                <a href="contact.html" class="mr-5 hover:text-gray-900">Contáctanos</a>
+                <a href="index.html" class="mr-5 hover:text-gray-200">Inicio</a>
+                <a href="products.html" class="mr-5 hover:text-gray-200">Productos</a>
+                <a href="about.html" class="mr-5 hover:text-gray-200">Sobre Nosotros</a>
+                <a href="contact.html" class="mr-5 hover:text-gray-200">Contáctanos</a>
             </nav>
         </div>
     </header>
     <main class="container mx-auto px-4 h-screen" >
-        <h1 class="text-3xl font-bold text-center my-8">Bienvenidos a Nuestra Tienda de Mascotas</h1>
-        <p class="text-center">Encuentra el mejor alimento, juguetes y accesorios para tu perro o gato.</p>
+        <h1 class="text-3xl font-bold text-center my-8 text-white">Bienvenidos a Nuestra Tienda de Mascotas</h1>
+        <p class="text-center text-white">Encuentra el mejor alimento, juguetes y accesorios para tu perro o gato.</p>
     </main>
     <footer>
-        <p class="text-center">Copyright &copy; 2022 Petshop E-commerce</p>
+        <p class="text-center">Copyright &copy; 2024 Petshop IA</p>
     </footer>
 </body>
 </html>
