--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         </div>
     </main>
     <footer>
-        <p class="text-center">Copyright &copy; 2024 Petshop IA</p>
+        <p class="text-center text-white">Copyright &copy; 2024 Petshop IA</p>
     </footer>
 </body>
 </html>
