--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p class="text-center text-white">Encuentra el mejor alimento, juguetes y accesorios para tu perro o gato.</p>
     </main>
     <footer>
-        <p class="text-center">Copyright &copy; 2024 Petshop IA</p>
+        <p class="text-center text-white">Copyright &copy; 2024 Petshop IA</p>
     </footer>
 </body>
 </html>
