--- a/products.html
+++ b/products.html
@@ -22,7 +22,7 @@
         </div>
     </header>
     <main class="container mx-auto px-4">
-        <h1 class="text-2xl font-bold text-center my-8">Nuestros Productos</h1>
+        <h1 class="text-2xl font-bold text-center my-8 text-white">Nuestros Productos</h1>
         <div id="products" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
             <!-- Products will be inserted here by JavaScript -->
         </div>
