--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
     </main>
     <footer>
-        <p class="text-center text-white">Copyright &copy; 2024 Petshop IA</p>
+        <p class="text-center text-white py-5">Copyright &copy; 2024 Petshop IA</p>
     </footer>
 </body>
 </html>
