--- a/products.html
+++ b/products.html
@@ -28,7 +28,7 @@
         </div>
     </main>
     <footer>
-        <p class="text-center text-white my-5">Copyright &copy; 2024 Petshop IA</p>
+        <p class="text-center text-white py-5">Copyright &copy; 2024 Petshop IA</p>
     </footer>
     <!-- Chat Modal -->
     <div id="chatModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full">
