--- a/products.html
+++ b/products.html
@@ -21,7 +21,7 @@
             </nav>
         </div>
     </header>
-    <main class="container mx-auto px-4">
+    <main class="container mx-auto px-4 h-screen">
         <h1 class="text-2xl font-bold text-center my-8 text-white">Nuestros Productos</h1>
         <div id="products" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
             <!-- Products will be inserted here by JavaScript -->
