--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             </nav>
         </div>
     </header>
-    <main class="container mx-auto px-4 h-screen">
+    <main class="container mx-auto px-4 min-h-screen">
         <h1 class="text-2xl font-bold text-center my-8">Contáctanos</h1>
         <div class="leading-relaxed text-base mb-4">
             <p>Para cualquier pregunta o consulta, no dudes en contactarnos:</p>
