--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
         </div>
     </header>
-    <main class="container mx-auto px-4 h-screen" >
+    <main class="container mx-auto px-4 min-h-screen" >
         <h1 class="text-3xl font-bold text-center my-8 text-white">Bienvenidos a Nuestra Tienda de Mascotas</h1>
         <p class="text-center text-white">Encuentra el mejor alimento, juguetes y accesorios para tu perro o gato.</p>
     </main>
