--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
         </div>
     </header>
     <main class="container mx-auto px-4 min-h-screen">
-        <h1 class="text-2xl font-bold text-center my-8">Contáctanos</h1>
-        <div class="leading-relaxed text-base mb-4">
+        <h1 class="text-2xl font-bold text-center text-white my-8">Contáctanos</h1>
+        <div class="leading-relaxed text-base mb-4 text-white">
             <p>Para cualquier pregunta o consulta, no dudes en contactarnos:</p>
             <p><strong>Jorge Espinoza</strong><br>
             Celular: +51 941 868 075<br>
@@ -32,17 +32,17 @@
             <form class="w-full max-w-lg mx-auto mt-8">
                 <div class="flex flex-wrap -mx-3 mb-6">
                     <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-                        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="name">Nombre</label>
+                        <label class="block uppercase tracking-wide text-white text-xs font-bold mb-2" for="name">Nombre</label>
                         <input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white" id="name" type="text" placeholder="Roberto Cerpa">
                     </div>
                     <div class="w-full md:w-1/2 px-3">
-                        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="email">Correo</label>
+                        <label class="block uppercase tracking-wide text-white text-xs font-bold mb-2" for="email">Correo</label>
                         <input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white" id="email" type="email" placeholder="email@example.com">
                     </div>
                 </div>
                 <div class="flex flex-wrap -mx-3 mb-6">
                     <div class="w-full px-3">
-                        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="message">Mensaje</label>
+                        <label class="block uppercase tracking-wide text-white text-xs font-bold mb-2" for="message">Mensaje</label>
                         <textarea class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white" id="message" rows="4"></textarea>
                     </div>
                 </div>
