--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             </nav>
         </div>
     </header>
-    <main class="container mx-auto px-4 text-white min-h-screen">
+    <main class="container mx-auto px-4 text-white h-screen">
         <h1 class="text-2xl font-bold text-center my-8">Sobre Nosotros</h1>
             <div class="mx-auto leading-relaxed text-base mb-4">
             <p>Bienvenido a nuestra tienda de mascotas, un lugar donde las necesidades de cada mascota se satisfacen con amor y cuidado. Ubicados en el corazón de Ica, Perú, nos comprometemos a proporcionar alimentos, juguetes y accesorios de alta calidad para tus queridos perros y gatos.</p>
