--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="background-image-container h-screen">
+<body class="background-image-container">
     <header class="text-white body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
