--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <header class="text-white body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-                <span class="ml-3 text-xl s">Pet Shop</span>
+                <span class="ml-3 text-xl text-white">Pet Shop</span>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a href="index.html" class="mr-5 hover:text-gray-200">Inicio</a>
