--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="text-white body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-                <img src="img/logo.jpeg" alt="Logo" class="h-10 w-auto mr-2"> <!-- Replace 'logo.png' with your logo's path -->
-                <h1>Petshop E-commerce</h1>
+                <img src="img/logo.jpeg" alt="Logo" class="h-25 w-auto mr-2"> <!-- Replace 'logo.png' with your logo's path -->
+                <h1 class="text-xl text-white">PET SHOP IA</h1>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a href="index.html" class="mr-5 hover:text-gray-200">Inicio</a>
